manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxtjs
  namespace: aks-architect
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aks-architect-nuxtjs
  template:
    metadata:
      labels:
        app: aks-architect-nuxtjs
    spec:
      nodeSelector:
        workloadType: user
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: aks-architect-nuxtjs
      containers:
      - name: aks-architect-nuxtjs
        image: aksarchitect.azurecr.io/aks-archtitect:${IMAGE_TAG}
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu:  0.5
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1024Mi
